fix: fix page not centered

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   .hero { text-align: center;
 }
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
